# iconsetgenerator

./: .hgignore  .project  Iconsetgenerator.cabal  ProjectHome.md  build_run.sh  clean.sh  grunt.sh  install_haskell.sh  one.sh  run_as_root.sh  see.sh  sth.cfg
src/: Main.hs
src/IconsetGenerator/: CmdLine.hs  IconServer.hs  Icons.hs  Main.hs
src/webapp/: .jshintrc  Gruntfile.js  component.json  index.html  jsb.sh  karma-e2e.conf.js  karma.conf.js  package.json
src/webapp/app/: colortest.html  index.html
src/webapp/app/components/jquery.colorpicker/: bower.json
src/webapp/app/scripts/: app.js  icons.js
src/webapp/app/scripts/controllers/: Icon.js  IconDesigner.js  main.js
src/webapp/app/scripts/directives/: ColorPicker.js  directive.js
src/webapp/app/scripts/services/: DrawIcon.js  IconNames.js  Icons.js
src/webapp/app/styles/: main.css  main.scss
src/webapp/app/views/: main.html
src/webapp/test/e2e/: colorpicker-scenarios.js  colorpicker.html  scenarios.js
src/webapp/test/mock/services/: IconNamesMock.js
src/webapp/test/spec/controllers/: Icon.js  IconDesigner.js  main.js
src/webapp/test/spec/directives/: directive.js
src/webapp/test/spec/services/: DrawIcon.js  IconNames.js  Icons.js  Icons.js.bak
