name:           Iconsetgenerator
version:        0.1
cabal-version:  >=1.4
build-type:     Simple
author:         steven
license:        GPL-3

executable iconset
  build-depends:   
                   base >= 4,
                   diagrams,
                   colour >= 2.3.3,
                   diagrams-core,
                   diagrams-cairo,
                   diagrams-lib

  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         IconsetGenerator/Main.hs
  extensions:      
                   FlexibleContexts, 
                   NoMonomorphismRestriction, 
                   TypeFamilies

Library
  Build-Depends:     base >= 3 && < 5
  Exposed-modules:   IconsetGenerator.Icons
  ghc-options:       -Wall
  hs-source-dirs:  src
  extensions:      
                   FlexibleContexts, 
                   NoMonomorphismRestriction, 
                   TypeFamilies
